1999-09-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmM4/FvwmM4.c (Resolution):
	* FvwmCpp/FvwmCpp.c (Resolution):
	removed unused include files <X11/extensions/shape.h> and
	<X11/Xmu/SysUtil.h>

1999-02-14  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmIconBox/FvwmIconBox.c (RelieveWindow):
	* FvwmIconBox/FvwmIconBox.h: removed inline from declaration of
	RelieveWindow

1999-01-22  Paul D. Smith  <psmith@gnu.org>

	* FvwmWinList/Mallocs.c (UpdateString): Increment the length, not
	the pointer.

1999-01-17  Chris Rankin  <rankinc@bellsouth.net>

	* FvwmWinList/ButtonArray.c (UpdateButton): Use saferealloc().
	* FvwmWinList/FvwmWinList.c: ShutMeDown turned into an
	exit-procedure (installed via atexit).
	SIGPIPE and SIGTERM now set a global flag which breaks the event
	loop, rather than exiting directly.
	Event loop restyled after FvwmIconMan, which is neater and simpler.
	Signals installed with sigaction (if present).
	If no sigaction, then use signal & siginterrupt (BSD 4.3).
	If no siginterrupt then just bang a couple of rocks together.
	Added "const" and function attributes to a select few prototypes.
	Loose malloc turned into safemalloc.
	* FvwmWinList/Mallocs.c (saferealloc): saferealloc() fixed.
	* FvwmWinList/Mallocs.h: Removed duplicate fvwmlib prototype
	(CopyString).
	Removed useless prototype (CatString2).

Sat Jan 16 00:31:25 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmSaveDesk/FvwmSaveDesk.1:
	* FvwmSaveDesk/FvwmSaveDesk.c (do_save): No longer have build-time
	option for fvwm and config file names.

1999-01-12  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmPager/x_pager.c (IconMoveWindow):
	(MoveWindow): removed duplicate code

	* FvwmPager/x_pager.c (MoveWindow): applied FvwmPager focus problem
	patch by Matthias Clasen

Sun Jan 10 23:40:01 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmIconMan/fvwm.c:
	* FvwmButtons/output.c:
	* FvwmIconBox/FvwmIconBox.c (myErrorHandler): Fixed format/arg
	mismatch in [v][f]printf().
