@@ -1,3 +1,9 @@
+1999-10-01  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmPager/x_pager.c (FvwmErrorHandler):
+	* FvwmPager/FvwmPager.c (Loop):
+	don't exit on errors
+
 1999-09-24  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmM4/FvwmM4.c (Resolution):
